2.13.3
 - fix: casting error when using integer feature for plot color
 - fix: also export logs and tables to .rtdc with prefix "so2exp_"
 - enh: minor minimization in waiting times
 - setup: bump dclab from 0.48.4 to 0.50.1
2.13.2
 - docs: don't build PDF on rtd (failed)
 - setup: bump dclab from 0.48.2 to 0.48.4 (don't load invalid
   inertia ratio data from existing HDF5 files)
2.13.1
 - setup: bump dclab from 0.48.1 to 0.48.2 (improved speed, fixed
   bug with inertia ratio in long channels)
2.13.0
 - feat: support new viscosity model buyukurganci-2022 (#136)
 - enh: increase speed of QuickView event visualization
 - enh: turn on auto-apply in QuickView by default
 - setup: bump dclab from 0.47.2 to 0.48.1
2.12.0
 - feat: allow to disable KDE or use feature data as marker
   hue in QuickView
 - fix: do not perform auto-apply when changing downsampling
   value and downsampling is disabled in QuickView
 - fix: catch IndexError when trying to view an event that is not
   there anymore in polygon-selection-mode in QuickView
 - enh: make auto-apply in QuickView plot settings optional
 - docs: update screenshot scripts
2.11.11
 - enh: strip http(s):// from DCOR server string in settings
 - enh: improve GUI of QuickView (#133, #43)
 - setup: bump dclab from 0.47.0 to 0.47.2
2.11.10
 - fix: detect chaged files on disk when reloading metadata
 - setup: bump dclab from 0.46.4 to 0.47.0 (new bg_med feature
   and other convenience methods)
2.11.9
 - fix: include logs when exporting data (#126)
 - setup: bump dclab from 0.46.2 to 0.46.4 (new features)
2.11.8
 - setup: bump dclab from 0.45.0 to 0.46.2 (#132)
 - build: pin pyinstaller version to 5.3
 - ref: use `hashobj` from upstream dclab (#132)
2.11.7
 - build: fix build pipelines
2.11.6
 - setup: bump dclab from 0.43.0 to 0.45.0 (scalar feature support)
2.11.5
 - build: use InnoSetup "autopf" feature for installation directory
2.11.4
 - enh: preselect only innate features in data export
   to reduce computation time