@@ -2,6 +2,7 @@
  - fix: casting error when using integer feature for plot color
  - fix: also export logs and tables to .rtdc with prefix "so2exp_"
  - enh: minor minimization in waiting times
+ - ref: unify json dumps when saving sessions
  - setup: bump dclab from 0.48.4 to 0.50.1
 2.13.2
  - docs: don't build PDF on rtd (failed)
